Revert "make day 5 actually work"
This reverts commit 5fa0c3eca6b6f7fea20ac45fed553b79ecbf576a.